Display Server Error Messages in Client

--- a/client/src/components/Upload/upload.sass
+++ b/client/src/components/Upload/upload.sass
@@ -17,6 +17,7 @@ form
     background: lightblue
     border: 3px dashed #06f
     border-radius: 3px
+    color: #06f
     display: flex
     font-size: 18px
     justify-content: center
